// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Background Overlay Active overlay 1`] = `
.c0 {
  display: block;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: #000;
  opacity: 0.3;
  z-index: 200;
  cursor: pointer;
}

<div>
  <div
    aria-hidden="true"
    class="c0 "
    tabindex="-1"
  />
</div>
`;

exports[`Background Overlay Inactive overlay 1`] = `
.c0 {
  display: block;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: #000;
  opacity: 0;
  z-index: 200;
  cursor: pointer;
}

<div>
  <div
    aria-hidden="true"
    class="c0 "
    tabindex="-1"
  />
</div>
`;
